# streambt

./: .gitignore  README.md  install-talib.sh  pyproject.toml  setup-uv-proj.sh
adv_predict/: artifacts.py  eda.ipynb  experiment.py  experiment_class_plan.md  figures.py  metrics.py  ml.ipynb  pipeline.py
eda/: indicator_check.ipynb
learning_hooks/: pre-commit
sandbox/: ema.py  exiting.py  hof.py  lambda.py  loop.py  out.txt  out1.txt  out3.txt  polars.ipynb  polars_pipe.py  pyspark_pipe.py  strat_review.ipynb  test.py  visual.ipynb
setup/: fix_java_version.sh  install-talib.sh
src/streambt/: __init__.py  engine.py  indicators.py
src/streambt/backends/spark/: __init__.py  indicators.py
test/: test_metrics.py
transform/: indicators.py  polars_pipe.py
