[project]
name = "streambt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sluofoss", email = "41530060+sluofoss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyspark>=3.5.5",
    "ta-lib>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
