[project]
name = "streambt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sluofoss", email = "41530060+sluofoss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyspark>=3.5.5",
    "ta-lib>=0.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb>=1.2.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "memory-profiler>=0.61.0",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
]
